styles.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');

@font-face {
    font-family: Caveman;
    src: url(asset/font/Cardenio\ Modern\ Bold.ttf);
}

body {
    font-family: "Caveman";
    background-color: #FFF3E0;
    margin: 0;
    padding: 0;
    display: flex;
    justify-content: center;
    align-items: center;
    min-height: 100vh;
    background-image: url(asset/images/site-bg.png);
    background-repeat: no-repeat;
    background-size: cover;
}

.container {
    width: 90%;
    max-width: 1000px;
    text-align: center;
    padding: 2rem;
    background-image: url(asset/images/text-bg.png);
    background-repeat: no-repeat;
    background-position: center;
    background-size: cover;
    color: white;
}

.container-main {
    width: 90%;
    max-width: 1000px;
    text-align: center;
    padding: 2rem;
    background-size: cover;
    color: white;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 50px;

}

#logo {
    width: 80%;
    max-width: 1000px;
}

h1,
h2 {
    font-size: 2.5rem;
    margin-bottom: 2rem;
}

.button-container {
    display: flex;
    flex-direction: column;
    gap: 1rem;
}

.cave-button,
.cave-button-selection {
    display: block;
    color: #100c0d;
    padding: 1rem;
    text-decoration: none;
    font-size: 2.5rem;
    transition: ease-in-out .1s;
    border-radius: 5px;
    max-width: 300px;
    margin: 0 auto;
}

.cave-button-selection {
    font-size: 1rem;
    color: white;
    cursor: pointer;
    transition: ease-in-out .3s;
}

.cave-button-selection:hover {
    color: antiquewhite;
    background-image: url(asset/images/score-bg-red.png);
    background-position: center;
    background-size: cover;
}


.cave-button:hover,
.cave-button:active {
    background-color: #100c0d;
    color: white
}

.timer {
    font-size: 5rem;
    font-weight: bold;
    margin-bottom: 1rem;
}

.game-container {
    display: flex;
    flex-direction: column;
    gap: 30px;
}

.card-container {
    margin-bottom: 1rem;
    width: 100%;
    height: 400px;
    display: flex;
    justify-content: center;
    align-items: center;
    overflow: hidden;
}

.card-container img {
    max-width: 100%;
    max-height: 100%;
    height: 100%;
    object-fit: contain;
    border-radius: 10px;
}

.score-buttons {
    display: flex;
    flex-direction: column;
    font-size: 1.5rem;
}

.upper-score-buttons {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-content: center;
    align-items: center;
    gap: 10px;
}

.plus-one-button,
.plus-three-button {
    padding: 10px;
    border-radius: 10px;
    flex: 1;
}

.plus-one-button {
    background-image: url(asset/images/score-bg-yello.png);
    background-position: center;
    background-size: cover;
}

.plus-three-button {
    background-image: url(asset/images/caveman-poetry-green.png);
    background-position: center;
    background-size: cover;
}

.skip-button {
    background-image: url(asset/images/score-bg-red.png);
    background-position: center;
    background-size: cover;
    border: none;
    padding: 10px;
    border-radius: 10px;
    width: 98%;
    margin: auto;
}


.plus-one-button,
.plus-three-button,
.skip-button {
    -webkit-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

.time-input-container {
    display: flex;
    justify-content: center;
    align-items: center;
    margin-bottom: 2rem;
}

.time-input {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.time-input input {
    height: 40px;
    width: 80px;
    font-size: 2rem;
    text-align: center;
    border: none;
    margin-bottom: 0.5rem;
    background-color: transparent;
    color: white;
}

.time-input input:focus {
    outline: none;
}

.time-input label {
    font-size: 1rem;
    color: antiquewhite;
}

.time-input-container span {
    font-size: 1.5rem;
    margin: 0 0.5rem;
}

#plusOne {
    color: #cc9d0f;
}

#plusThree {
    color: #10D05E;
}

#skipCard {
    color: #d00f29;
}

#totalScore {
    color: antiquewhite;
    font-size: larger;
}

#results {
    font-size: 1.8rem;
}

/* Media queries for responsiveness */
@media screen and (max-width: 768px) {
    .container {
        padding: 2rem;
    }

    .container-main {
        padding: 1rem;
    }

    h1,
    h2 {
        font-size: 2rem;
    }

    .cave-button,
    .cave-button-selection {
        font-size: 1.8rem;
        padding: 0.8rem;
    }

    .timer {
        font-size: 3rem;
    }

    .card-container {
        height: 400px;
    }

    .card-container img {
        height: 100%;
    }

    .score-buttons {
        font-size: 1.2rem;
    }

    .skip-button {
        width: 90%;
    }

    .time-input input {
        height: 30px;
        width: 60px;
        font-size: 1.5rem;
    }

    .time-input-container span {
        font-size: 1.2rem;
    }

    #results {
        font-size: 1.5rem;
    }
}

@media screen and (max-width: 480px) {
    h1,
    h2 {
        font-size: 1.8rem;
    }

    .cave-button,
    .cave-button-selection {
        font-size: 1.5rem;
        padding: 0.6rem;
    }

    .timer {
        font-size: 2.5rem;
    }

    .card-container {
        height: 200px;
    }

    .score-buttons {
        font-size: 1rem;
    }

    .time-input input {
        height: 25px;
        width: 50px;
        font-size: 1.2rem;
    }

    .time-input-container span {
        font-size: 1rem;
    }

    #results {
        font-size: 1.2rem;
    }
}

